Fix service section on mobile view

--- a/ThDung/css/style.css
+++ b/ThDung/css/style.css
@@ -2608,7 +2608,7 @@ button.list-group-item:hover {
 .dummy {
     margin-top: 100%;
 }
-.in {
+.square-service {
     position: absolute;
     top: 0;
     bottom: 0;
